// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pazarama internal order snapshot camel 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "Ayse",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "Su",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "Ayse",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "Su",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "C2",
          "integrationCode": "pazarama",
        },
      ],
      "firstName": "Ayse",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "Su",
      "phone": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "Ayse",
        "isCorporate": false,
        "lastName": "Su",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelSource": undefined,
      "customerFirstName": "Ayse",
      "customerLastName": "Su",
      "dates": {
        "cancelledDate": undefined,
        "deliveredDate": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "PZ-2",
      "externalStatus": "12",
      "financials": {
        "currencyCode": "USD",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "carrierName": "",
          "shipmentMethod": "MANUAL",
          "status": "SUCCESS",
          "trackingCode": "tn",
        },
      ],
      "integrationCode": "pazarama",
      "internalStatus": "APPROVED",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "pazarama",
        "status": "PENDING",
      },
      "items": [
        {
          "barcode": "",
          "externalItemId": "p1",
          "externalLineItemId": "oi1",
          "itemStatus": "ACTIVE",
          "productName": "İsimsiz Ürün",
          "quantity": 1,
          "sku": "",
          "taxRate": 0,
          "totalPrice": 0,
          "unitPrice": 0,
        },
      ],
      "meta": {
        "currency": "USD",
        "customerId": "C2",
        "items": [
          {
            "cargo": {
              "trackingNumber": "tn",
            },
            "orderItemId": "oi1",
            "product": {
              "productId": "p1",
            },
            "quantity": 1,
          },
        ],
        "orderAmount": 100,
        "orderNumber": "PZ-2",
        "orderStatus": 12,
        "shipmentAddress": {
          "nameSurname": "Ayse Su",
        },
      },
      "orderNumber": "PZ-2",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "Ayse",
        "isCorporate": false,
        "lastName": "Su",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Pazarama internal order snapshot full-cancelled 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adr",
          "addressLine1": "Adr",
          "addressLine2": "Merkez Mah.",
          "city": "Ankara",
          "companyName": "",
          "countryCode": "TR",
          "email": "x@y.z",
          "firstName": "Mehmet",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "Can",
          "phone": "555",
          "postalCode": "06000",
          "state": "Cankaya",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "F",
          "addressLine1": "F",
          "addressLine2": "",
          "city": "Ankara",
          "companyName": "XYZ",
          "countryCode": "TR",
          "email": "",
          "firstName": "Mehmet",
          "isCorporate": true,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "Can",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "98",
          "taxOffice": "VD",
          "title": "Fatura Adresi",
        },
      ],
      "email": "m@mock.com",
      "externalIdentities": [
        {
          "externalCustomerId": "C5",
          "integrationCode": "pazarama",
        },
      ],
      "firstName": "Mehmet",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "Can",
      "phone": "555",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "F",
        "addressLine2": "",
        "city": "Ankara",
        "companyName": "XYZ",
        "countryCode": "TR",
        "email": "",
        "firstName": "Mehmet",
        "isCorporate": true,
        "lastName": "Can",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "98",
        "taxOffice": "VD",
      },
      "cancelSource": "SELLER",
      "customerFirstName": "Mehmet",
      "customerLastName": "Can",
      "dates": {
        "cancelledDate": 2026-05-05T05:05:05.000Z,
        "deliveredDate": 2026-01-12T08:00:00.000Z,
        "orderDate": 2026-01-10T08:00:00.000Z,
        "shippedDate": 2026-01-11T08:00:00.000Z,
      },
      "externalOrderId": "PZ-1",
      "externalStatus": "13",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 300,
        "shippingFee": 15,
        "subTotal": 300,
        "totalDiscount": 10,
        "totalTax": 20,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [
        {
          "carrierName": "Yurtici",
          "shipmentMethod": "MARKETPLACE",
          "status": "SUCCESS",
          "trackingCode": "T1",
        },
      ],
      "integrationCode": "pazarama",
      "internalStatus": "CANCELLED",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "pazarama",
        "status": "PENDING",
      },
      "items": [
        {
          "barcode": "C1",
          "externalItemId": "P1",
          "externalLineItemId": "OI1",
          "itemStatus": "CANCELLED",
          "productName": "U1",
          "quantity": 2,
          "sku": "C1",
          "taxRate": 18,
          "totalPrice": 200,
          "unitPrice": 100,
        },
      ],
      "meta": {
        "BillingAddress": {
          "AddressDetail": "F",
          "CityName": "Ankara",
          "CompanyName": "XYZ",
          "NameSurname": "Mehmet Can",
          "TaxNumber": "98",
          "TaxOffice": "VD",
        },
        "Currency": "TL",
        "CustomerId": "C5",
        "DeliveryDate": "2026-01-12T08:00:00.000Z",
        "DiscountAmount": 10,
        "Items": [
          {
            "Cargo": {
              "CompanyName": "Yurtici",
              "TrackingNumber": "T1",
            },
            "OrderItemId": "OI1",
            "OrderItemStatus": 13,
            "Product": {
              "Code": "C1",
              "Name": "U1",
              "ProductId": "P1",
              "VatRate": 18,
            },
            "Quantity": 2,
            "SalePrice": 100,
            "ShipmentCode": "SC",
            "TotalPrice": 200,
          },
        ],
        "OrderAmount": 300,
        "OrderDate": "2026-01-10T08:00:00.000Z",
        "OrderNumber": "PZ-1",
        "OrderStatus": 13,
        "ShipmentAddress": {
          "AddressDetail": "Adr",
          "CityName": "Ankara",
          "CustomerEmail": "x@y.z",
          "DistrictName": "Cankaya",
          "NameSurname": "Mehmet Can",
          "NeighborhoodName": "Merkez",
          "PhoneNumber": "555",
          "PostalCode": "06000",
        },
        "ShipmentAmount": 15,
        "ShipmentDate": "2026-01-11T08:00:00.000Z",
        "TaxAmount": 20,
        "customerEmail": "m@mock.com",
      },
      "orderNumber": "PZ-1",
      "shippingAddress": {
        "addressLine1": "Adr",
        "addressLine2": "Merkez Mah.",
        "city": "Ankara",
        "companyName": "",
        "countryCode": "TR",
        "email": "x@y.z",
        "firstName": "Mehmet",
        "isCorporate": false,
        "lastName": "Can",
        "phone": "555",
        "postalCode": "06000",
        "state": "Cankaya",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Pazarama internal order snapshot minimal 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "PAZ-GUEST-",
          "integrationCode": "pazarama",
        },
      ],
      "firstName": "MUSTERI",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelSource": undefined,
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "cancelledDate": undefined,
        "deliveredDate": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "",
      "externalStatus": "undefined",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [],
      "integrationCode": "pazarama",
      "internalStatus": "UNAPPROVED",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "pazarama",
        "status": "PENDING",
      },
      "items": [],
      "meta": {},
      "orderNumber": "",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;

exports[`Pazarama internal order snapshot returned-no-items 1`] = `
[
  {
    "claims": [],
    "customer": {
      "addresses": [
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": false,
          "isDefaultShipping": true,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Teslimat Adresi",
        },
        {
          "addressLine": "Adres Bilgisi Yok",
          "addressLine1": "Adres Bilgisi Yok",
          "addressLine2": "",
          "city": "",
          "companyName": "",
          "countryCode": "TR",
          "email": "",
          "firstName": "MUSTERI",
          "isCorporate": false,
          "isDefaultBilling": true,
          "isDefaultShipping": false,
          "lastName": "",
          "phone": "",
          "postalCode": "",
          "state": "",
          "taxNumber": "",
          "taxOffice": "",
          "title": "Fatura Adresi",
        },
      ],
      "email": "",
      "externalIdentities": [
        {
          "externalCustomerId": "PAZ-GUEST-Z",
          "integrationCode": "pazarama",
        },
      ],
      "firstName": "MUSTERI",
      "isEmailMasked": false,
      "isPhoneMasked": false,
      "lastName": "",
      "phone": "",
    },
    "order": {
      "billingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
      "cancelSource": undefined,
      "customerFirstName": "MUSTERI",
      "customerLastName": "",
      "dates": {
        "cancelledDate": 2026-05-05T05:05:05.000Z,
        "deliveredDate": undefined,
        "orderDate": 2026-05-05T05:05:05.000Z,
        "shippedDate": undefined,
      },
      "externalOrderId": "Z",
      "externalStatus": "7",
      "financials": {
        "currencyCode": "TRY",
        "grandTotal": 0,
        "shippingFee": 0,
        "subTotal": 0,
        "totalDiscount": 0,
        "totalTax": 0,
      },
      "flags": {
        "isAllocated": false,
        "isInvoiceGenerated": false,
        "isMetricsProcessed": false,
      },
      "fulfillment": [],
      "integrationCode": "pazarama",
      "internalStatus": "RETURNED",
      "invoice": {
        "invoiceMethod": "MARKETPLACE",
        "invoiceProvider": "pazarama",
        "status": "PENDING",
      },
      "items": [],
      "meta": {
        "OrderNumber": "Z",
        "OrderStatus": 7,
      },
      "orderNumber": "Z",
      "shippingAddress": {
        "addressLine1": "Adres Bilgisi Yok",
        "addressLine2": "",
        "city": "",
        "companyName": "",
        "countryCode": "TR",
        "email": "",
        "firstName": "MUSTERI",
        "isCorporate": false,
        "lastName": "",
        "phone": "",
        "postalCode": "",
        "state": "",
        "taxNumber": "",
        "taxOffice": "",
      },
    },
  },
]
`;
